<resources>
    <string name="app_name">D-Food</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_dish__result">Dish_Result</string>
    <string name="title_activity_check">Check</string>
    <string name="title_activity_user_home_page">Home</string>
    <string name="title_activity_delivery_home_page">Home</string>
    <string name="title_activity_register_page">RegisterPageActivity</string>

    <!-- layout_check -->
    <string name="checkHeader">Check</string>
    <string name="myPhoneNum">Phone: 412 736-9689</string>
    <string name="userName">U1</string>
    <string name="checkButton">Check Out</string>

    <!-- layout_delivery_home_page -->
    <string name="deliverymanHeader">Delivery man</string>
    <string name="startDeliveryButton">Start Delivery</string>

    <!-- layout_dish_info -->
    <string name="restaurantHeader">AAA Restaurant</string>
    <string name="restaurantDescription">American Burger\n $9.00\n Location:</string>
    <string name="restaurantComment">Comment</string>
    <string name="addCartButton">Add to cart</string>

    <!-- home page -->
    <string name="D_food_serch">D-Food Search</string>
    <string name="yourLocation">Your Location</string>
    <string name="findRestaurant">Find Restaurant</string>

    <!-- login page -->
    <string name="myAccountHint">user name</string>password
    <string name="myPasswordHint">password</string>
    <string name="myRePasswordHint">Re-enter Password</string>
    <string name="myLoginButton">Login</string>
    <string name="myRegisterButton">Register</string>
    <string name="switch_hint">I am a delivery man</string>

    <string name="myPhoneNumHint">Phone Number</string>

    <string name="myOrders">My orders</string>
    <string name="trackDelivery">Track my delivery</string>
    <string name="myInfo">My info</string>

    <!-- map page -->
    <string name="call">Call</string>password
    <string name="ring">Ring</string>password

    <string name="restaurantName">China Shit</string>
    <string name="phoneNum">Phone Number</string>
    <string name="deliverymanNum">Phone Number</string>
    <string name="taskName">Task Name</string>
    <string name="dManName">Name</string>

    <color name="my_background_white">#FFFFFFFF</color>
    <color name="my_background_dark">#ff000000</color>
    <color name="my_white">#FFFFFFFF</color>
    <color name="my_green">#ff10971a</color>
    <color name="my_red">#ffff0000</color>
    <color name="my_dark_red">#ffc60300</color>


    <string name="myLocationHint">Your Location</string>
    <string name="mySearch">Search</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="gps_network_not_enabled">Please Enable WiFi or GPS to Use Map Service</string>
    <string name="open_location_settings">Go to Enable GPS</string>
    <string name="Cancel">Cancel</string>
    <string name="gps_error">Error</string>
    <string name="dManTag">My Location</string>

    <string-array name="quantities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="drawer_items">
        <item>Home</item>
        <item>Login</item>
        <item>My Cart</item>
        <item>User Home</item>
        <item>My Info</item>
    </string-array>

</resources>
