<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sam.d_food.presentation.check_page.CheckActivity">

    <TextView android:text="@string/checkHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_height_large"
        android:gravity="center"
        style="@style/my_font_big_white"
        android:background="@color/my_red"
        android:id="@+id/checkHeader"
        android:layout_alignParentTop="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checklistView"
        android:smoothScrollbar="true"
        android:fastScrollAlwaysVisible="true"
        android:fastScrollEnabled="true"
        android:layout_below="@+id/checkHeader"
        android:layout_above="@+id/editTextPhoneNum" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/my_font_medium_white"
        android:id="@+id/editTextPhoneNum"
        android:minHeight="@dimen/my_min_height_medium"
        android:background="@drawable/border"
        android:text="@string/myPhoneNum"
        android:editable="false"
        android:layout_above="@+id/editTextUserName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/my_font_medium_white"
        android:id="@+id/editTextUserName"
        android:minHeight="@dimen/my_min_height_medium"
        android:background="@drawable/border"
        android:text="@string/userName"
        android:editable="false"
        android:layout_above="@+id/startDeliverybutton" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkButton"
        style="@style/my_font_medium_plus_white"
        android:background="@drawable/border"
        android:id="@+id/startDeliverybutton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
