<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/my_background_white"
    tools:context="com.example.rodrigue.mywireframes.UserHomePageActivity"
    android:id="@+id/customerPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:layout_marginTop="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:focusableInTouchMode="false"
        style="@style/my_font_medium"
        android:textIsSelectable="true" />

    <Button
        android:layout_marginTop="@dimen/my_padding_from_logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/myOrders"
        android:background="@drawable/custom_btn"
        android:id="@+id/orders"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/trackDelivery"
        android:id="@+id/track"
        android:background="@drawable/custom_btn"
        android:layout_below="@+id/orders"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/myInfo"
        android:background="@drawable/custom_btn"
        android:id="@+id/info"
        android:layout_below="@+id/track"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
