<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/my_background_white"
    tools:context="com.example.sam.d_food.presentation.dish_page.DishInfoActivity">

    <TextView
        android:text="@string/restaurantHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/my_font_big_black"
        android:background="@color/my_red"
        android:id="@+id/restaurantName" />

    <LinearLayout
        android:layout_below="@+id/restaurantName"
        android:layout_above="@+id/commentsView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/linearLayoutRow"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/my_padding_small"
            android:id="@+id/dishImage"
            android:src="@drawable/food"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/restaurantDescription"
            android:textSize="@dimen/my_padding_medium"
            android:layout_marginBottom="@dimen/my_padding_small"
            android:layout_marginTop="@dimen/my_padding_small"
            style="@style/my_font_big_black"
            android:id="@+id/dishInfo"
            android:layout_weight="1"
            android:background="@drawable/border_white"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/my_padding_small"
        android:text="@string/restaurantComment"
        android:background="@drawable/border_white"
        android:id="@+id/commentsView"
        android:layout_above="@+id/dishSpinner"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="@dimen/my_padding_from_logo"
        android:id="@+id/dishSpinner"
        android:entries="@array/quantities"
        android:layout_above="@+id/addToCart"
        android:popupBackground="@drawable/spinner_bg"
        style="@style/spinner_style"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:text="@string/addCartButton"
        android:id="@+id/addToCart"
        android:background="@drawable/custom_btn"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
